fix goto list button bug

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -29,6 +29,7 @@
       <input class="new-list" type="text" name="newList" placeholder="List Name" autocomplete="off">
       <button class="switch-btn" type="submit" name="goto" value='switch'>Go to list</button>
       <button class="home-btn" type="submit" name="goto" value='home'><i class="fas fa-home"></i></button>
+      <input type="hidden" name="listName" value="<%= listTitle %>"></input>
     </form>
   </div>
 
